Store properties in scheduler's persistence
This speeds up the conflict check as well as the insertion of new
events.